<resources>
    <string name="app_name">Dash Carr</string>

    <!--LoginFragment-->

    <string name="continue_with_google">Continue with Google</string>
    <string name="login">Login</string>
    <string name="email_necessary">Email<font color='#DD2421'>*</font></string>
    <string name="password_necessary">Password<font color='#DD2421'>*</font></string>
    <string name="btnLogin">Login</string>
    <string name="btnLogout">Logout</string>
    <string name="or">Or</string>

    <!--Camera-->

    <string name="start_recording">Start</string>
    <string name="stop_recording">Stop</string>
    <string name="delete_recording">Delete</string>
    <string name="recording_in_progress">Recording…</string>
    <string name="header_security_camera">Security Camera</string>

    <!--Route-->
    <string name="total_time">Total time:</string>
    <string name="total_distance">Total distance:</string>
    <string name="average_speed">Average speed:</string>

    <!--Error-->

    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_too_short_password">Too short password</string>
    <string name="error_non_upper_case">Password must contain at least one upper case</string>
    <string name="error_non_digit">Password must contain at least one digit</string>
    <string name="error_unknown">Oops, something went wrong</string>
    <string name="error_enter_both_email_and_password">Please enter both email and password</string>

    <!--Credentials-->

    <string name="facebook_application_id">129380996925597</string>
    <string name="facebook_client_token">bb12e8b82e802b44fb03d464577399f5</string>
    <string name="email_smtp_app_app_password">iisp wauq polr qisj</string>

    <!--SettingsFragment-->

    <string name="about_app">About App</string>
    <string name="maps_settings">Map Settings</string>
    <string name="social_settings">Social Settings</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="history_settings">History Settings</string>
    <string name="saved_recordings">Saved Recordings</string>
    <string name="power_settings">Power Settings</string>
    <string name="how_to_use">How to use</string>
    <string name="friends">Friends</string>
    <string name="quick_messages">Quick Messages</string>
    <string name="point_of_interest">Point of Interest</string>
    <string name="credits">Credits</string>

    <!--HistoryFragment-->

    <string name="show_statistics">Show Statistics</string>
    <string name="update_recording">Update</string>

    <!--RecordingStatisticsFragment-->

    <string name="statistics">Statistics</string>
    <string name="total_storage">Total Storage:</string>
    <string name="number_of_files">Number Of Files:</string>
    <string name="incoming">…</string>
    <string name="avg_time">Average Time:</string>
    <string name="avg_size">Average file size:</string>
    <string name="btnBack">Back</string>

    <!--RecordingDetailsFragment-->

    <string name="length">Length:</string>
    <string name="amount_of_datapoints">Amount of Datapoints:</string>
    <string name="date_of_recording">Date of recording:</string>
    <string name="data_size">Data size:</string>
    <string name="bar">______________________________________</string>

    <!--RecordingFragment-->

    <string name="sensor_recording">Recording</string>
    <string name="elapsed_time">Elapsed Time: %s</string>
    <string name="amount_of_data">Amount of Data:</string>

    <!--ConfigureFragment-->

    <string name="configure">Configure</string>
    <string name="name">Name:</string>
    <string name="product_info_text">
        This app will support you while driving!\n\n
        Adding points of interests is easy, just press and hold on the map.\n\n
        You can start a new recording on the map tab with the button in the corner.\n\n
        After saving it, you can analyse the data in the history.\n\n
        When you hold the map tab a experimental feature will appear, feel free to try it!\n\n
        You can also use your camera as a dashcam. To activate this feature click the camera and select the triangle.
    </string>
    <string name="start_using">Start Using!</string>

    <!--MapFragment-->
    <string name="marker_name">Marker name</string>
    <string name="save_poi">save</string>
    <string name="cancel_poi">Cancel</string>
    <string name="some_permissions_missing">Location is not allowed. Change in settings</string>
    <string name="not_enough_duration_gps">Did not record for a sufficient amount of time, try again</string>

    <!--Copyright-->
    <string name="version_1.0">Version: 1.0</string>
    <string name="_2023_uit">© 2023 UIT</string>
    <string name="icons8">Icons by icons8.com</string>

    <!--PowerSettingsFragment-->

    <string name="lost_percentage">Battery consumption: %d%%</string>
    <string name="gained_percentage">Charged amount: %d%%</string>
    <string name="power_settings_text">Power Settings</string>
    <string name="battery_saving_mode">Battery Saving Mode:</string>

    <!--SocialSettingsFragment-->
    <string name="add_friend_button">Add Friend</string>
    <string name="delete_friend_button">Delete Friend</string>
    <string name="input_name">Name</string>
    <string name="input_phone">Phone</string>
    <string name="input_email">Email</string>
    <string name="update">Update</string>

    <!--HudView-->

    <string name="back_button_content_description">Back button</string>

    <!--MapSettingsFragment-->

    <string name="points_of_interest">Points Of Interest</string>
    <string name="btnRename">Rename</string>
    <string name="btnDelete">delete</string>
    <string name="update_poi">update</string>
    <string name="delete_poi">delete</string>
    <string name="point_deleted_successfully">Point deleted successfully</string>
    <string name="point_renamed_successfully">Point renamed successfully</string>
    <string name="add_message">Add Message</string>
    <string name="select_contact">Select Contact</string>
    <string name="select_message">Select Message</string>
    <string name="message">Message</string>
    <string name="add_message_capitalized">ADD MESSAGE</string>
    <string name="send_message">Send message</string>
    <string name="change_tiles">Change Map Tile</string>
    <string name="mapnik">Standard</string>
    <string name="usgs_sat">Satellite</string>
    <string name="dark">Dark</string>
    <string name="default_tile_source">Standard</string>
    <string name="current_tile">Current tile: %1$s</string>

    <!--SocialSettingsFragment-->
    <string name="sent_messages">Sent Messages</string>
    <string name="contact_list">Contacts</string>
    <string name="message_deleted_successfully">Message deleted successfully</string>
    <string name="unknown_user">Unknown user</string>
    <string name="to_whom_message">To:</string>
    <string name="developers">Developers</string>
    <string name="stian_ellingsen_johnsen">Stian Ellingsen Johnsen</string>
    <string name="yves_simon_zeulner">Yves-Simon Zeulner</string>
    <string name="quentin_michel_st_phane_regnier">Quentin Regnier</string>
    <string name="yevhen_verkhalantsev">Yevhen Verkhalantsev</string>

    <!--QuickMessageFragment-->
    <string name="message_list">Messages</string>
    <string name="delete_message">Delete Message</string>

    <!--Authentication Prompt-->

    <string name="prompt_title">Unauthorized Action Detected</string>
    <string name="prompt_subtitle">Authorize yourselves with your phone pin</string>
    <string name="prompt_description">If the app is not unlocked in the next 10s, an emergency message will be sent.
    </string>
    <string name="messages">Messages</string>
    <string name="history">History</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>

    <!--Camera Settings-->

    <string name="select_duration">Select Duration</string>
    <string name="open_saved_recordings">Open Saved Recordings</string>

    <!--Toasts-->
    <string name="login_failed">Login failed</string>
    <string name="added_message">Added Message</string>
    <string name="error">Error</string>
    <string name="error_input">Error: %s</string>
    <string name="file_saved">File saved</string>
    <string name="updated">Updated</string>
    <string name="error_updating">Error updating</string>
    <string name="increase_power">Recording increases the power consumption!</string>
    <string name="error_delete_message">Error deleting Message</string>
    <string name="no_access_camera">Can\'t access camera</string>
    <string name="no_access_location">Could not access current location</string>
    <string name="mandatory_name">Name is a mandatory field</string>
    <string name="mandatory_phone_email">Phone or Email are mandatory fields</string>
    <string name="check_email">Check your email please</string>
    <string name="mandatory_content">Content is a mandatory field</string>
    <string name="gps_is_disable">GPS is disable</string>
    <string name="gps_was_disabled">GPS was disabled</string>
    <string name="recording_started">Recording Started</string>
    <string name="recording_stopped">Recording Stopped</string>
    <string name="recording_paused">Recording Paused</string>
    <string name="recording_resumed">Recording Resumed</string>
    <string name="recording_deleted">Recording Deleted</string>
    <string name="friend_deleted">Friend deleted</string>
    <string name="error_deleting_friend">Error deleting friend</string>
    <string name="sms_permission">SMS permission granted</string>
    <string name="message_sent">Message sent</string>

    <!--NavBar-->
    <string name="map">Map</string>
    <string name="messages">Messages</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

</resources>