<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/location_icon"
        android:title="@string/map"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_social"
        android:enabled="true"
        android:icon="@drawable/message_button_card_vector"
        android:title="@string/message"
        app:showAsAction="ifRoom"
        />

    <item android:title=""
        android:enabled="false"
        />
    
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/history_icon"
        android:title="@string/history"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        />

</menu>