<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".presentation.tabs.settings.about_app.AboutAppFragment">

    <TextView
        android:id="@+id/about_app_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/about_app"
        android:layout_marginTop="@dimen/margin_padding_size_10"
        android:textColor="@android:color/white"
        android:textSize="@dimen/header"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/back_to_settings"
        android:layout_width="@dimen/standard_touch_size"
        android:layout_height="@dimen/standard_touch_size"
        android:layout_marginEnd="32dp"
        android:contentDescription="@null"
        android:layout_marginTop="@dimen/margin_padding_size_10"
        android:layout_marginStart="@dimen/margin_padding_size_10"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginHorizontal="@dimen/margin_padding_size_18"
        android:background="@drawable/white_rounded_16dp_background"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_padding_size_20"
        android:paddingVertical="@dimen/margin_padding_size_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_size_8"
            android:text="@string/developers"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_size_8"
            android:text="@string/stian_ellingsen_johnsen"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_size_8"
            android:text="@string/yves_simon_zeulner"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_size_8"
            android:text="@string/quentin_michel_st_phane_regnie"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_size_8"
            android:text="@string/yevhen_verkhalantsev"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginHorizontal="@dimen/margin_padding_size_18"
        android:background="@drawable/white_rounded_16dp_background"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_padding_size_20"
        android:paddingVertical="@dimen/margin_padding_size_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_4"
            android:layout_marginBottom="@dimen/margin_padding_size_8"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_4"
            android:text="@string/version_1.0"
            android:textSize="@dimen/text_size_16" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_4"
            android:text="@string/_2023_uit"
            android:textSize="@dimen/text_size_16" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_4"
            android:text="@string/icons8"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>