<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".presentation.tabs.settings.camera_settings.CameraSettingsFragment">

    <ImageView
        android:id="@+id/btn_back_to_settings"
        android:layout_width="@dimen/standard_touch_size"
        android:layout_height="@dimen/standard_touch_size"
        android:layout_marginStart="@dimen/margin_padding_size_10"
        android:layout_marginTop="@dimen/margin_padding_size_10"
        android:contentDescription="@string/back_button_content_description"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_10"
        android:text="@string/camera_settings"
        android:textColor="@color/header_color"
        android:textSize="@dimen/header"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_10"
        android:layout_marginEnd="@dimen/margin_padding_size_10"
        android:background="@drawable/white_rounded_16dp_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/duration_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_padding_size_10"
            android:layout_marginTop="@dimen/margin_padding_size_10"
            android:layout_marginBottom="@dimen/margin_padding_size_10"
            android:gravity="center"
            android:text="@string/select_duration"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_20" />

        <NumberPicker
            android:id="@+id/duration_picker"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_padding_size_10"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_10"
            android:layout_marginBottom="@dimen/margin_padding_size_10"
            android:layout_weight="1" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:insetTop="@dimen/margin_padding_size_0"
        android:insetBottom="@dimen/margin_padding_size_0"
        android:text="@string/open_saved_recordings"
        android:textSize="@dimen/text_size_14"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>