<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBlue">

        <ImageView
            android:id="@+id/back_to_settings"
            android:layout_width="@dimen/standard_touch_size"
            android:layout_height="@dimen/standard_touch_size"
            android:contentDescription="@string/back_button_content_description"
            android:layout_marginTop="@dimen/margin_padding_size_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/text_social_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_settings_text"
            android:layout_marginTop="@dimen/margin_padding_size_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/text_size_34"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear_friends"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_padding_size_10"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/margin_padding_size_10"
            android:layout_marginBottom="50dp"
            android:background="@drawable/white_rounded_16dp_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnAddFriend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_social_settings" />

        <Button
            android:id="@+id/btnAddFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_size_38"
            android:backgroundTint="@color/black"
            android:insetTop="@dimen/margin_padding_size_0"
            android:insetBottom="@dimen/margin_padding_size_0"
            android:text="@string/add_friend_button"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/add_message_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="100dp" />


        <Button
            android:id="@+id/add_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_message_capitalized"
            android:insetTop="@dimen/margin_padding_size_0"
            android:insetBottom="@dimen/margin_padding_size_0"
            android:backgroundTint="@color/black"
            app:cornerRadius="20dp"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btnAddFriend"
            app:layout_constraintLeft_toLeftOf="@id/btnAddFriend"
            android:layout_marginStart="100dp"

            />

        <Button
            android:visibility="gone"
            android:id="@+id/send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/margin_padding_size_10"
            android:layout_marginBottom="@dimen/margin_padding_size_10" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>