<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="RecordingDetailsFragment"
            type="com.example.dashcarr.presentation.tabs.settings.RecordingDetailsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBlue">

        <TextView
            android:id="@+id/text_recording_name"
            android:layout_width="309dp"
            android:layout_height="59dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:text="@string/incoming"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_bar_record_1"
            android:layout_width="415dp"
            android:layout_height="45dp"
            android:layout_marginTop="388dp"
            android:ems="10"
            android:text="@string/bar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_recording_name" />

        <TextView
            android:id="@+id/text_bar_record_2"
            android:layout_width="415dp"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:ems="10"
            android:text="@string/bar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_datasize" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="10dp"
            android:text="@string/date_of_recording"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_datapoint" />

        <TextView
            android:id="@+id/text_lenght"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="9dp"
            android:text="@string/length"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_bar_record_1" />

        <TextView
            android:id="@+id/text_datasize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="10dp"
            android:text="@string/data_size"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_date" />

        <TextView
            android:id="@+id/text_datapoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="10dp"
            android:text="@string/amount_of_datapoints"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_lenght" />

        <ImageView
            android:id="@+id/image_back_details"
            android:layout_width="42dp"
            android:layout_height="30dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="26dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/inputDataSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="640dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/text_datasize"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/input_amount_of_datapoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="564dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/text_datapoint"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/graph_gyro"
            android:layout_width="388dp"
            android:layout_height="272dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_recording_name" />

        <TextView
            android:id="@+id/inputElapsedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/text_lenght"
            app:layout_constraintTop_toBottomOf="@+id/text_bar_record_1" />

        <TextView
            android:id="@+id/inputFileDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/text_date"
            app:layout_constraintTop_toBottomOf="@+id/text_datapoint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>